--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: Kajiro Font Family;
+    src: url("../Beiyo_gameChanger/Kajiro\ Bold.ttf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -10,12 +17,12 @@ head,body{
 #main{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    /* background-color: black; */
 }
 #back{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    /* background-color: black; */
 }
 #top{
     pointer-events: none;
@@ -128,5 +135,5 @@ head,body{
 #back img{
     width: 100%;
     height: 100%;
-    object-fit: cover;  
+    object-fit:cover;  
 }
