--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@font-face {
+/* @font-face {
     font-family: Kajiro Font Family;
-    src: url("../Beiyo_gameChanger/Kajiro\ Bold.ttf") format('truetype');
+    src: url(Kajiro\ Bold.ttf) format('truetype');
     font-weight: bold;
     font-style: normal;
-}
+} */
 
 *{
     margin: 0;
@@ -88,15 +88,21 @@ head,body{
     height: 8vw;
     /* background-color: red; */
     overflow: hidden;
+    position: relative;
 }
 #heroleft #elem h1{
     color: white;
-
+    position:absolute;
     line-height: .9;
     font-family: "kajiro";
     font-weight: 100;
     font-size: 10vw;
+    top: 100%;
+    left: 0;
 }
+#heroleft #elem h1:nth-child(1){
+    top: 0;
+} 
 #heroleft button{
     pointer-events: all;
     font-family: "kajiro";
@@ -134,6 +140,6 @@ head,body{
 /* back */
 #back img{
     width: 100%;
-    height: 100%;
+    height: 90vh;
     object-fit:cover;  
 }
